fix gap

--- a/src/screens/home/HomeScreenAmbassador.module.css
+++ b/src/screens/home/HomeScreenAmbassador.module.css
@@ -127,7 +127,7 @@
   display: flex;
   margin-top: 33px;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 23px;
 }
 
 .student_card {
